--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Stylish Portfolio - Start Bootstrap Template</title>
+    <title>Graffiti in Berlin</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -32,9 +32,7 @@
         <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle">
           <i class="fa fa-times"></i>
         </a>
-        <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="#top">Start Bootstrap</a>
-        </li>
+
         <li>
           <a class="js-scroll-trigger" href="#top">Home</a>
         </li>
@@ -42,10 +40,10 @@
           <a class="js-scroll-trigger" href="#about">About</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#services">Services</a>
+          <a class="js-scroll-trigger" href="#services">Blog Posts</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
+          <a class="js-scroll-trigger" href="#portfolio">Projects</a>
         </li>
         <li>
           <a class="js-scroll-trigger" href="#contact" onclick=$( "#menu-close").click();>Contact</a>
@@ -56,10 +54,9 @@
     <!-- Header -->
     <header class="header" id="top">
       <div class="text-vertical-center">
-        <h1>Start Bootstrap</h1>
-        <h3>Free Bootstrap Themes &amp; Templates</h3>
+        <h1>Graffiti in Berlin</h1>
         <br>
-        <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">Find Out More</a>
+        <a href="https://www.youtube.com/watch?v=pZgDS0pau-Y" class="btn btn-dark btn-lg js-scroll-trigger">Street Art</a>
       </div>
     </header>
 
@@ -85,7 +82,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                    <i class="fa fa-bomb fa-stack-1x text-primary"></i>
                   </span>
                   <h4>
                     <strong>Service Name</strong>
@@ -98,7 +95,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                    <i class="fa fa-tank fa-stack-1x text-primary"></i>
                   </span>
                   <h4>
                     <strong>Service Name</strong>
@@ -111,7 +108,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-flask fa-stack-1x text-primary"></i>
+                    <i class="fa fa-wall fa-stack-1x text-primary"></i>
                   </span>
                   <h4>
                     <strong>Service Name</strong>
@@ -124,7 +121,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                    <i class="fa fa-spraypaing fa-stack-1x text-primary"></i>
                   </span>
                   <h4>
                     <strong>Service Name</strong>
@@ -208,12 +205,12 @@
 
     <!-- Map -->
     <section id="contact" class="map">
-      <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+      <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src=" https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9714.196468307851!2d13.431982593607223!3d52.50540087698143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a847a6f5edaf4b%3A0xde9be97b4a912818!2sEast+Side+Gallery!5e0!3m2!1sen!2sca!4v1506793673155"></iframe>
       <br/>
       <small>
-        <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
+        <a href=" https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9714.196468307851!2d13.431982593607223!3d52.50540087698143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a847a6f5edaf4b%3A0xde9be97b4a912818!2sEast+Side+Gallery!5e0!3m2!1sen!2sca!4v1506793673155"></a>
       </small>
-    </section>
+</section>
 
     <!-- Footer -->
     <footer>
@@ -221,33 +218,33 @@
         <div class="row">
           <div class="col-lg-10 mx-auto text-center">
             <h4>
-              <strong>Start Bootstrap</strong>
+              <strong>Cultural archaeology of the Berlin Wall</strong>
             </h4>
-            <p>3481 Melrose Place
-              <br>Beverly Hills, CA 90210</p>
+            <p>
+              <br>University of Victoria, CAN 3800 Finnerty Rd</p>
             <ul class="list-unstyled">
               <li>
                 <i class="fa fa-phone fa-fw"></i>
-                (123) 456-7890</li>
+                (123) V8P 5C2</li>
               <li>
                 <i class="fa fa-envelope-o fa-fw"></i>
-                <a href="mailto:name@example.com">name@example.com</a>
+                <a href="tfriedma@uvic.ca">Tamara Friedman</a>
               </li>
             </ul>
             <br>
-            <ul class="list-inline">
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-facebook fa-fw fa-3x"></i>
+                <a href="https://www.instagram.com/tamaranth485/">
+                  <i class="fa fa-instagram fa-fw fa-3x"></i>
                 </a>
               </li>
+             </ul>       
               <li class="list-inline-item">
                 <a href="#">
                   <i class="fa fa-twitter fa-fw fa-3x"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://twitter.com/mar3west">
                   <i class="fa fa-dribbble fa-fw fa-3x"></i>
                 </a>
               </li>
