--- a/index.html
+++ b/index.html
@@ -158,28 +158,28 @@
               <div class="col-md-6">
                 <div class="portfolio-item">
                   <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/portfolio-1.jpg">
+                    <img class="img-portfolio img-fluid" src="img/bw.jpg">
                   </a>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="portfolio-item">
                   <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/portfolio-2.jpg">
+                    <img class="img-portfolio img-fluid" src="img/bw1.jpg">
                   </a>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="portfolio-item">
                   <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/portfolio-3.jpg">
+                    <img class="img-portfolio img-fluid" src="img/bw2.jpg">
                   </a>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="portfolio-item">
                   <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/portfolio-4.jpg">
+                    <img class="img-portfolio img-fluid" src="img/bw3.jpg">
                   </a>
                 </div>
               </div>
@@ -250,7 +250,7 @@
               </li>
             </ul>
             <hr class="small">
-            <p class="text-muted">Copyright &copy; Your Website 2017</p>
+            <p class="text-muted">Copyright &copy; Berlin-Graffiti 2017</p>
           </div>
         </div>
       </div>
