--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                 <div class="portfolio-item">
                   <a href="#">
                     <img class="img-portfolio img-fluid" src="img/bw.jpg">
+                    <p>this is my blog post,this is my blog postthis is my blog postthis is my blog postthis is my blog postthis is my blog post</p>
                   </a>
                 </div>
               </div>
