--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-bomb fa-stack-1x text-primary"></i>
+                    <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                   </span>
                   <h4>
                     <strong>Service Name</strong>
                   </h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                  <a href="#" class="btn btn-light">Learn More</a>
+                  <a href="blog1.html" class="btn btn-light">Learn More</a>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
